<resources>
    <string name="app_name">Currency Exchange Calculator</string>
    <string name="welcome">Welcome to Walkiria\'s currency exchange calculator. Please select your desired quantity, base coin and destination currency</string>
    <string name="quantity">Type quantity</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="calculate">Calculate</string>
    <string name="invalid_value">Invalid value, please type a quantity</string>
    <string name="error">Error</string>
    <string name="set_valid_quantity">Please type a valid quantity</string>
    <string name="ok">OK</string>
    <string name="results"><![CDATA[%s %s => %s \nBased on data on %s\n 1 %s = %s %s]]></string>
    <string name="powered_by"><u>Powered by Walkiria Apps</u></string>
    <string name="contact_me"><u>Contact me</u></string>
    <string name="outdated_information">The currency exchange rate may be  outdated. This can be normal if there is only one day of difference. If not, please try to open the app with an available internet connection.\nLast update on: %s</string>
    <string name="error_retrieving_values">There has been an error retrieving values, we cannot offer an update exchange rate, please check back later and check your internet connection.</string>
</resources>